Alteração para que comentário possa ter mais de uma Acessibilidade